# smart-contracts

./: .gitignore  NOTICE  README.md  coverage.sh
.github/workflows/: Basic.yml  e2e.yml
artifacts/: alice_overseer.wasm  alice_terra_token.wasm  checksums.txt  checksums_intermediate.txt
contracts/alice_overseer/: Cargo.toml
contracts/alice_overseer/examples/: schema.rs
contracts/alice_overseer/schema/: config_response.json  execute_msg.json  instantiate_msg.json  migrate_msg.json  migrate_timelock_response.json  query_msg.json  registered_contracts_response.json
contracts/alice_overseer/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  msg.rs  state.rs
contracts/alice_terra_token/: Cargo.toml
contracts/alice_terra_token/examples/: schema.rs
contracts/alice_terra_token/schema/: config.json  exchange_rate_response.json  execute_msg.json  instantiate_msg.json  meta_tx.json  migrate_msg.json  query_msg.json  relay_nonce_response.json
contracts/alice_terra_token/src/: contract.rs  error.rs  execute.rs  lib.rs  migrate.rs  msg.rs  query.rs  relay.rs  state.rs  utils.rs
contracts/alice_terra_token/src/testing/: mock_bech32_api.rs  mock_querier.rs  mod.rs  relay_tests.rs  tests.rs
cosmos-sdk-proto/: Cargo.toml  README.md
cosmos-sdk-proto/src/: lib.rs
cosmos-sdk-proto/src/prost/: cosmos.authz.v1beta1.rs  cosmos.bank.v1beta1.rs  cosmos.base.v1beta1.rs
docs/: contract.Rmd
utils/: README.md  package-lock.json  package.json
utils/src/scripts/: deploy.ts  generateRelayUnitTestMsgs.ts  playground.ts  test.ts
utils/src/utils/: accounts.ts  contract.ts  terra.ts  testAccounts.ts
