[package]
name = "alice-terra-token"
version = "1.0.0"
authors = ["Alice Software <hello@alice.co>"]
edition = "2018"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.0", features = ['stargate'] }
cosmwasm-storage = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
cw0 = { version = "0.9.1" }
cw2 = { version = "0.9.1" }
cw20 = { version = "0.9.1" }
cw20-base = { version = "0.9.1", features = ["library"] }
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-bignumber = { version = "2.2.0" }
sha2 = "0.9.3"
ripemd160 = "0.9.1"
bech32 = "0.8.0"
hex = "0.4"
base64 = "0.13.0"
bigint = "4"
thiserror = { version = "1.0.20" }
cosmos-sdk-proto = { path = "../../cosmos-sdk-proto", default-features = false }
prost = "0.7"
prost-types = "0.7"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
hex-literal = "0.3.1"
